--- a/src/app/modules/colaboradores/colaboradores.component.html
+++ b/src/app/modules/colaboradores/colaboradores.component.html
@@ -33,6 +33,11 @@
           <th mat-header-cell *matHeaderCellDef> Email </th>
           <td mat-cell *matCellDef="let empleado"> {{ empleado.email }} </td>
         </ng-container>
+
+        <ng-container matColumnDef="telefono">
+          <th mat-header-cell *matHeaderCellDef> Telefono </th>
+          <td mat-cell *matCellDef="let empleado"> {{ empleado.telefono }} </td>
+        </ng-container>
       
         <ng-container matColumnDef="acciones">
           <th mat-header-cell *matHeaderCellDef> Acciones </th>
@@ -43,8 +48,8 @@
           </td>
         </ng-container>
       
-        <tr mat-header-row *matHeaderRowDef="['nombre', 'turno', 'sucursal', 'email', 'acciones']"></tr>
-        <tr mat-row *matRowDef="let row; columns: ['nombre', 'turno', 'sucursal', 'email', 'acciones'];"></tr>
+        <tr mat-header-row *matHeaderRowDef="['nombre', 'turno', 'sucursal', 'email', 'telefono', 'acciones']"></tr>
+        <tr mat-row *matRowDef="let row; columns: ['nombre', 'turno', 'sucursal', 'email', 'telefono', 'acciones'];"></tr>
       </table>
       
       </div>
