--- a/src/app/modules/emergente-capturar-huellas/emergente-capturar-huellas.component.html
+++ b/src/app/modules/emergente-capturar-huellas/emergente-capturar-huellas.component.html
@@ -27,7 +27,7 @@
 <br/><br/><br/><!--
 <button (click)="fn_CapturaFP()">Mostrar captura</button> -->
 
-        <button *ngIf="currentImageFingerFixed" class="btn btn-danger btn-block" (click)="testVerifyFinger()">
+        <button *ngIf="currentImageFingerFixed" class="btn btn-danger btn-block" (click)="uploadFingerprint()">
             Guardar huella capturada
         </button>
 
