--- a/src/app/modules/editar-producto/editar-producto.component.html
+++ b/src/app/modules/editar-producto/editar-producto.component.html
@@ -22,7 +22,7 @@
                                  type="text"
                                  matInput
                                  autocomplete="off"
-                                 placeholder="escribelo o escanealo"
+                                 placeholder="escribelo o escanealo" minlength="12" maxlength="15"
                                  />
                            </mat-form-field>
                         </p>
