--- a/src/app/modules/horarios-vista/horarios-vista.component.html
+++ b/src/app/modules/horarios-vista/horarios-vista.component.html
@@ -8,7 +8,8 @@
  <!--  <div class="not-found" *ngIf="optionToShow === 1">{{ message }}</div>
   <br/>-->
  <div class="hour_container" *ngIf="optionToShow === 1" mat-dialog-content>
-    <table class="divf">
+  <div style="margin: auto; display: block; text-align: center; color: red; font-size: 20px;">{{ message }}</div>
+  <table class="divf">
       <thead>
         <tr>
           <th>Día Semana</th>
