--- a/src/app/modules/alta-colaboradores/alta-colaboradores.component.html
+++ b/src/app/modules/alta-colaboradores/alta-colaboradores.component.html
@@ -170,9 +170,9 @@
             </div>
             <div mat-dialog-actions fxLayoutAlign="center center">  <!--style="display: flex; justify-content: center;"-->
               <div>
-                <button mat-raised-button (click)="registrar(); enviarMensajeWhatsApp()" type="submit"  style="background-color: #fd9727; font-size: 20px; margin-top: 17px; height: 40px; margin-right: 90px;width: 120px;">Aceptar</button>
+                <button mat-raised-button (click)="registrar()" type="submit"  style="background-color: #fd9727; font-size: 20px; height: 40px; margin-right: 90px;width: 120px;">Aceptar</button>
               </div> 
-              <div style="display: flex; justify-content: center; margin-top: 20px;">
+              <div style="display: flex; justify-content: center;">
                 <button mat-raised-button (click)="cerrarDialogo()" style="background-color: #000000; font-size: 20px; height: 40px;color: white; width: 120px;">Cancelar</button>
               </div>
             </div>  
