--- a/src/app/modules/editar-colaborador/editar-colaborador.component.html
+++ b/src/app/modules/editar-colaborador/editar-colaborador.component.html
@@ -131,8 +131,8 @@
                 </form>
             </div>
             <div mat-dialog-actions fxLayoutAlign="center center"> <!--style="display: flex; justify-content: center;"-->
-              <button mat-raised-button (click)="actualizar()" type="submit"  style="background-color: #fd9727; font-size: 20px; margin-top: 17px; height: 40px; margin-right: 90px;width: 120px;">Aceptar</button>
-              <button mat-raised-button  (click)="cerrarDialogo()" style="background-color: #000000; font-size: 20px; margin-top: 17px; height: 40px;color: white; width: 120px;">Cancelar</button>  <!--routerLink="/home/colaboradores" -->
+              <button mat-raised-button (click)="actualizar()" type="submit"  style="background-color: #fd9727; font-size: 20px; height: 40px; margin-right: 90px;width: 120px;">Aceptar</button>
+              <button mat-raised-button  (click)="cerrarDialogo()" style="background-color: #000000; font-size: 20px;  height: 40px;color: white; width: 120px;">Cancelar</button>  <!--routerLink="/home/colaboradores" -->
             </div>  
         </div>
     </div>
