--- a/src/app/modules/entradas/entradas.component.html
+++ b/src/app/modules/entradas/entradas.component.html
@@ -6,6 +6,7 @@
     <div mat-dialog-content>
       <br>
       <form [formGroup]="form">
+         <div style="color:red">{{message}}</div>
         <div class="row">
           <div class="col-sm-12">
             <p>
