--- a/src/app/modules/plan-editar/membresias-editar.component.html
+++ b/src/app/modules/plan-editar/membresias-editar.component.html
@@ -1,13 +1,8 @@
-<div >
-    <div>
-     
+
             <h1 class="title" mat-dialog-title>Editar Plan</h1>
-            <div mat-dialog-content>
-            <form [formGroup]="formulariodePlan">
+      
+            <form [formGroup]="formulariodePlan" mat-dialog-content>
                 <div >
-                <!--<div class="mi-div-con-borde responsive-div"></div>-->
-                <div style="color:red">{{message}}</div>
-                    <br/>
                     <div class="row">
                         <div class="col-sm-6">
                             <p>
@@ -90,14 +85,12 @@
                     </div>   
                 </div>
             </form>
-        </div>
+      
 
         <div style="display: flex; justify-content: center;" mat-dialog-actions>
-            <button mat-stroked-button (click)="enviar()" style="background-color: #fd9727; font-size: 20px; margin-top: 17px; height: 40px; margin-right: 90px;">Aceptar</button>
-            <button mat-stroked-button (click)="cerrarDialogo()" style="background-color: #000000; font-size: 20px; margin-top: 17px; height: 40px;color: white;">Cancelar</button>
+            <button mat-stroked-button (click)="actualizar()" style="background-color: #fd9727; font-size: 20px;  height: 40px; margin-right: 90px;">Aceptar</button>
+            <button mat-stroked-button (click)="cerrarDialogo()" style="background-color: #000000; font-size: 20px;  height: 40px;color: white;">Cancelar</button>
           </div>   
-    </div>
-</div>
 
 
 
