--- a/src/app/modules/service-dialog/service-dialog.component.html
+++ b/src/app/modules/service-dialog/service-dialog.component.html
@@ -1,11 +1,12 @@
-<div>
-  <div class="title" mat-dialog-title>
-     <label>SERVICIOS</label>
-  </div>
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-pulse-sync" [fullScreen] = "true"><p style="color: white" > Cargando... </p></ngx-spinner>
+ 
+  <label class="title" mat-dialog-title>SERVICIOS</label>
+ 
   <div mat-dialog-content>
      <form [formGroup]="serviceForm" >
         <br>
         <div>
+         <div style="color:red">{{message}}</div>
            <div >
               <div class="row">
                  <div class="col-sm-6">
@@ -56,4 +57,3 @@
      <button *ngIf="seleccionado == 2" mat-stroked-button type="submit" (click)="actualizarForm()" style="background-color: #fd9727; font-size: 20px;  height: 40px; margin-right: 90px;">Actualizar</button>
      <button mat-stroked-button (click)="cancelar()" style="background-color: #000000; font-size: 20px; height: 40px;color: white;">Cancelar</button>
   </div>
-</div>
